force-app/main/default/objects/Order_Item__c/fields/Add_to_Buying_Destination__c.field-meta.xml
<CustomField>
    <fullName>Add_to_Buying_Destination__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add to Buying Destination</label>
    <type>Checkbox</type>
</CustomField>