force-app/main/default/objects/Order_Item__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent</label>
    <referenceTo>Agent__c</referenceTo>
    <relationshipLabel>Order Items</relationshipLabel>
    <relationshipName>Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>