force-app/main/default/objects/Order_Item__c/fields/Airline__c.field-meta.xml
<CustomField>
    <fullName>Airline__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Airline</label>
    <referenceTo>Airline__c</referenceTo>
    <relationshipLabel>Order Items</relationshipLabel>
    <relationshipName>Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>