force-app/main/default/objects/Order_Item__c/fields/Airport_of_Destination__c.field-meta.xml
<CustomField>
    <fullName>Airport_of_Destination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Airport of Destination</label>
    <referenceTo>Airport__c</referenceTo>
    <relationshipLabel>Order Items</relationshipLabel>
    <relationshipName>Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>