force-app/main/default/objects/Order_Item__c/fields/Airport_of_Loading__c.field-meta.xml
<CustomField>
    <fullName>Airport_of_Loading__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Airport of Loading</label>
    <referenceTo>Airport__c</referenceTo>
    <relationshipLabel>Order Items (Airport of Loading)</relationshipLabel>
    <relationshipName>Order_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>