force-app/main/default/objects/Order_Item__c/fields/BAF_Order__c.field-meta.xml
<CustomField>
    <fullName>BAF_Order__c</fullName>
    <label>BAF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>