force-app/main/default/objects/Order_Item__c/fields/Bayan_cancellation_charge_Order__c.field-meta.xml
<CustomField>
    <fullName>Bayan_cancellation_charge_Order__c</fullName>
    <label>Bayan cancellation charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>