force-app/main/default/objects/Order_Item__c/fields/BSLS_ID__c.field-meta.xml
<CustomField>
    <fullName>BSLS_ID__c</fullName>
    <label>BSLS ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>