force-app/main/default/objects/Order_Item__c/fields/Bunker_surcharge_Order__c.field-meta.xml
<CustomField>
    <fullName>Bunker_surcharge_Order__c</fullName>
    <label>Bunker surcharge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>