force-app/main/default/objects/Order_Item__c/fields/Buying_Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>Buying_Rate_Type__c</fullName>
    <formula>TEXT(RMS_Order__r.Rate_Type__c)</formula>
    <label>Buying Rate Type</label>
    <type>Text</type>
</CustomField>