force-app/main/default/objects/Order_Item__c/fields/Carriage_Congestion_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Carriage_Congestion_Surcharge__c</fullName>
    <label>Carriage Congestion Surcharge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>