force-app/main/default/objects/Order_Item__c/fields/Carrier_Security_Fees__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Security_Fees__c</fullName>
    <label>Carrier Security Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>