force-app/main/default/objects/Order_Item__c/fields/Cleaning_charges_Order__c.field-meta.xml
<CustomField>
    <fullName>Cleaning_charges_Order__c</fullName>
    <label>Cleaning charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>