force-app/main/default/objects/Order_Item__c/fields/CMC_Order__c.field-meta.xml
<CustomField>
    <fullName>CMC_Order__c</fullName>
    <label>Container Maintenance Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>