force-app/main/default/objects/Order_Item__c/fields/Commodity__c.field-meta.xml
<CustomField>
    <fullName>Commodity__c</fullName>
    <formula>Quotation_Item__r.Route__r.Commodity__r.Name</formula>
    <label>Commodity</label>
    <type>Text</type>
</CustomField>