force-app/main/default/objects/Order_Item__c/fields/Container_movement_charges_Order__c.field-meta.xml
<CustomField>
    <fullName>Container_movement_charges_Order__c</fullName>
    <label>Container movement charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>