force-app/main/default/objects/Order_Item__c/fields/Customer_Port_Pair_Margin__c.field-meta.xml
<CustomField>
    <fullName>Customer_Port_Pair_Margin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Port Pair Margin</label>
    <referenceTo>Route_Profit_Margin__c</referenceTo>
    <relationshipLabel>Order Items (Customer Port Pair Margin)</relationshipLabel>
    <relationshipName>Order_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>