force-app/main/default/objects/Order_Item__c/fields/Destination_Loading_Charges_Order__c.field-meta.xml
<CustomField>
    <fullName>Destination_Loading_Charges_Order__c</fullName>
    <label>Destination Loading Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>