force-app/main/default/objects/Order_Item__c/fields/DTHC_Order__c.field-meta.xml
<CustomField>
    <fullName>DTHC_Order__c</fullName>
    <label>DTHC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>