force-app/main/default/objects/Order_Item__c/fields/EIC_Order__c.field-meta.xml
<CustomField>
    <fullName>EIC_Order__c</fullName>
    <label>Equipment Imbalance Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>