force-app/main/default/objects/Order_Item__c/fields/Equipment_Type_Order__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Type_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Equipment Type</label>
    <referenceTo>Equipment_Type__c</referenceTo>
    <relationshipLabel>Order Items</relationshipLabel>
    <relationshipName>Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>