force-app/main/default/objects/Order_Item__c/fields/Ex_Works_Charge__c.field-meta.xml
<CustomField>
    <fullName>Ex_Works_Charge__c</fullName>
    <label>Ex Works Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>