force-app/main/default/objects/Order_Item__c/fields/Fasah_Charges__c.field-meta.xml
<CustomField>
    <fullName>Fasah_Charges__c</fullName>
    <label>Fasah Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>