force-app/main/default/objects/Order_Item__c/fields/Fasah_fee_Order__c.field-meta.xml
<CustomField>
    <fullName>Fasah_fee_Order__c</fullName>
    <label>Fasah fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>