force-app/main/default/objects/Order_Item__c/fields/Freight_Difference_FD__c.field-meta.xml
<CustomField>
    <fullName>Freight_Difference_FD__c</fullName>
    <label>Freight Difference(FD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>