force-app/main/default/objects/Order_Item__c/fields/Greater_Vessel_ETD__c.field-meta.xml
<CustomField>
    <fullName>Greater_Vessel_ETD__c</fullName>
    <formula>Vessel_ETD__c  &gt; Order__r.Quotation__r.Quotation_Validity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Greater Vessel ETD</label>
    <type>Checkbox</type>
</CustomField>