force-app/main/default/objects/Order_Item__c/fields/Included_PDF_Additional__c.field-meta.xml
<CustomField>
    <fullName>Included_PDF_Additional__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Included PDF Additional</label>
    <type>Checkbox</type>
</CustomField>