force-app/main/default/objects/Order_Item__c/fields/Included_PDF_Ex_works__c.field-meta.xml
<CustomField>
    <fullName>Included_PDF_Ex_works__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Included PDF Ex-works</label>
    <type>Checkbox</type>
</CustomField>