force-app/main/default/objects/Order_Item__c/fields/Included_PDF_ShippingLine__c.field-meta.xml
<CustomField>
    <fullName>Included_PDF_ShippingLine__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Included PDF ShippingLine</label>
    <type>Checkbox</type>
</CustomField>