force-app/main/default/objects/Order_Item__c/fields/Inspection_Order__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Order__c</fullName>
    <label>Inspection</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>