force-app/main/default/objects/Order_Item__c/fields/ISPS_Order__c.field-meta.xml
<CustomField>
    <fullName>ISPS_Order__c</fullName>
    <label>ISPS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>