force-app/main/default/objects/Order_Item__c/fields/Lashing_Charges__c.field-meta.xml
<CustomField>
    <fullName>Lashing_Charges__c</fullName>
    <label>Lashing Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>