force-app/main/default/objects/Order_Item__c/fields/Low_Sulphur_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Low_Sulphur_Surcharge__c</fullName>
    <label>Low Sulphur Surcharge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>