force-app/main/default/objects/Order_Item__c/fields/MCCFOOGC_Order__c.field-meta.xml
<CustomField>
    <fullName>MCCFOOGC_Order__c</fullName>
    <label>Ministry clearnce charge for OOG cargo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>