force-app/main/default/objects/Order_Item__c/fields/Miscellaneous_Order__c.field-meta.xml
<CustomField>
    <fullName>Miscellaneous_Order__c</fullName>
    <label>Miscellaneous</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>