force-app/main/default/objects/Order_Item__c/fields/Non_Palletized_Surcharge_Order__c.field-meta.xml
<CustomField>
    <fullName>Non_Palletized_Surcharge_Order__c</fullName>
    <label>Non Palletized Surcharge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>