force-app/main/default/objects/Order_Item__c/fields/Operational_Charges_selling__c.field-meta.xml
<CustomField>
    <fullName>Operational_Charges_selling__c</fullName>
    <label>Operational Charges(selling)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>