force-app/main/default/objects/Order_Item__c/fields/Operational_Recovery_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Operational_Recovery_Surcharge__c</fullName>
    <label>Operational Recovery Surcharge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>