force-app/main/default/objects/Order_Item__c/fields/Order_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Order_Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order Cancelled?</label>
    <type>Checkbox</type>
</CustomField>