force-app/main/default/objects/Order_Item__c/fields/Origin_Customs_clearance_Order__c.field-meta.xml
<CustomField>
    <fullName>Origin_Customs_clearance_Order__c</fullName>
    <label>Origin Customs clearance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>