force-app/main/default/objects/Order_Item__c/fields/Origin_Detention_Demurrage_Charges__c.field-meta.xml
<CustomField>
    <fullName>Origin_Detention_Demurrage_Charges__c</fullName>
    <label>Origin Detention/Demurrage Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>