force-app/main/default/objects/Order_Item__c/fields/Origin_Loading_Charges_Order__c.field-meta.xml
<CustomField>
    <fullName>Origin_Loading_Charges_Order__c</fullName>
    <label>Origin Loading Charges (Dock Stuffing)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>