force-app/main/default/objects/Order_Item__c/fields/OTHC_Order__c.field-meta.xml
<CustomField>
    <fullName>OTHC_Order__c</fullName>
    <label>OTHC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>