force-app/main/default/objects/Order_Item__c/fields/Parent_OrderItem__c.field-meta.xml
<CustomField>
    <fullName>Parent_OrderItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>used for while cloning item so as to store related record thing.</description>
    <label>Parent OrderItem</label>
    <referenceTo>Order_Item__c</referenceTo>
    <relationshipLabel>Order Items</relationshipLabel>
    <relationshipName>Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>