force-app/main/default/objects/Order_Item__c/fields/Pest_control_Order__c.field-meta.xml
<CustomField>
    <fullName>Pest_control_Order__c</fullName>
    <label>Pest control</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>