force-app/main/default/objects/Order_Item__c/fields/Place_of_Discharge__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Discharge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Place of Discharge</label>
    <referenceTo>Place__c</referenceTo>
    <relationshipLabel>Order Items (Place of Discharge)</relationshipLabel>
    <relationshipName>Order_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>