force-app/main/default/objects/Order_Item__c/fields/Place_of_Pickup__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Pickup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Place of Pickup</label>
    <referenceTo>Place__c</referenceTo>
    <relationshipLabel>Order Items</relationshipLabel>
    <relationshipName>Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>