force-app/main/default/objects/Order_Item__c/fields/POD_freetime__c.field-meta.xml
<CustomField>
    <fullName>POD_freetime__c</fullName>
    <label>POD freetime</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>