force-app/main/default/objects/Order_Item__c/fields/Port_of_Loading_Order__c.field-meta.xml
<CustomField>
    <fullName>Port_of_Loading_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Port of Loading</label>
    <referenceTo>Port__c</referenceTo>
    <relationshipLabel>Order Items1</relationshipLabel>
    <relationshipName>Order_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>