force-app/main/default/objects/Order_Item__c/fields/Port_Shuttling_Order__c.field-meta.xml
<CustomField>
    <fullName>Port_Shuttling_Order__c</fullName>
    <label>Port Shuttling</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>