force-app/main/default/objects/Order_Item__c/fields/Profit__c.field-meta.xml
<CustomField>
    <fullName>Profit__c</fullName>
    <formula>(Total_Order__c - Buying_Rate__c) *  Teus__c</formula>
    <label>Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>