force-app/main/default/objects/Order_Item__c/fields/Quotation_Item__c.field-meta.xml
<CustomField>
    <fullName>Quotation_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quotation Item</label>
    <referenceTo>Quotation_Item__c</referenceTo>
    <relationshipLabel>Order Items</relationshipLabel>
    <relationshipName>Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>