force-app/main/default/objects/Order_Item__c/fields/Re_palletization_Order__c.field-meta.xml
<CustomField>
    <fullName>Re_palletization_Order__c</fullName>
    <label>Re palletization</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>