force-app/main/default/objects/Order_Item__c/fields/Reefer_cntr_plug_in_charges_Order__c.field-meta.xml
<CustomField>
    <fullName>Reefer_cntr_plug_in_charges_Order__c</fullName>
    <label>Reefer Plugin charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>