force-app/main/default/objects/Order_Item__c/fields/Remarks_Additional_Charges__c.field-meta.xml
<CustomField>
    <fullName>Remarks_Additional_Charges__c</fullName>
    <label>Remarks Additional Charges</label>
    <type>TextArea</type>
</CustomField>