force-app/main/default/objects/Order_Item__c/fields/Remarks_Origin_Charges__c.field-meta.xml
<CustomField>
    <fullName>Remarks_Origin_Charges__c</fullName>
    <label>Remarks Origin Charges</label>
    <type>TextArea</type>
</CustomField>