force-app/main/default/objects/Order_Item__c/fields/Remarks_SL_Charges__c.field-meta.xml
<CustomField>
    <fullName>Remarks_SL_Charges__c</fullName>
    <label>Remarks SL Charges</label>
    <type>TextArea</type>
</CustomField>