force-app/main/default/objects/Order_Item__c/fields/RMS_Order__c.field-meta.xml
<CustomField>
    <fullName>RMS_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RMS</label>
    <referenceTo>RMS__c</referenceTo>
    <relationshipLabel>Order Items</relationshipLabel>
    <relationshipName>Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>