force-app/main/default/objects/Order_Item__c/fields/Route__c.field-meta.xml
<CustomField>
    <fullName>Route__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Route</label>
    <referenceTo>Route__c</referenceTo>
    <relationshipLabel>Order Items (Route)</relationshipLabel>
    <relationshipName>Order_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>