force-app/main/default/objects/Order_Item__c/fields/Route_Profit_Margin__c.field-meta.xml
<CustomField>
    <fullName>Route_Profit_Margin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Route Pair Margin</label>
    <referenceTo>Route_Profit_Margin__c</referenceTo>
    <relationshipLabel>Order Items</relationshipLabel>
    <relationshipName>Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>