force-app/main/default/objects/Order_Item__c/fields/Selling_Charges_Included__c.field-meta.xml
<CustomField>
    <fullName>Selling_Charges_Included__c</fullName>
    <label>Selling Charges Included</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>