force-app/main/default/objects/Order_Item__c/fields/Shipping_Line_Order__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Line_Order__c</fullName>
    <formula>RMS_Order__r.Shipping_Line__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Line</label>
    <type>Text</type>
</CustomField>