force-app/main/default/objects/Order_Item__c/fields/Stuffing_Charges_Order__c.field-meta.xml
<CustomField>
    <fullName>Stuffing_Charges_Order__c</fullName>
    <label>Stuffing Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>